# aws-batch-monitor

./: Cargo.toml  README.md  index.html
src/: lib.rs
static/: wasm.js
