[package]
name = "aws-batch-monitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
web-sys = "0.3.61"
wasm-bindgen = "0.2.84"
aws-sdk-batch = "0.24.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
